add entities and init listing service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
+# datasource configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/sm360
 spring.datasource.username=sm360
 spring.datasource.password=techassignment
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.platform=postgresql
+
+# others properties
+tierlimit=10
