--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,6 @@
 		<dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>42.2.18</version>
         </dependency>
 		<dependency>
 			<groupId>org.flywaydb</groupId>
@@ -48,6 +47,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+	      <groupId>org.springdoc</groupId>
+	      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+	      <version>2.0.0</version>
+	   </dependency>
+				
 	</dependencies>
 
 	<build>
