add tu and fix some properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,9 @@ spring.datasource.platform=postgresql
 
 # others properties
 sm360.tierlimit=2
+
+# swagger
+#set it to false for production
+springdoc.api-docs.enabled=true
+#disable default spring data rest endpoints generation
+spring.data.rest.detection-strategy=annotated
