--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,14 @@
 	      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 	      <version>2.0.0</version>
 	   </dependency>
-				
+	   <dependency>
+		  <groupId>jakarta.validation</groupId>
+		  <artifactId>jakarta.validation-api</artifactId>
+		</dependency>
+		<dependency>
+		  <groupId>org.hibernate.validator</groupId>
+		  <artifactId>hibernate-validator</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
