--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,11 @@
 		  <groupId>org.hibernate.validator</groupId>
 		  <artifactId>hibernate-validator</artifactId>
 		</dependency>
+		<dependency>
+		  <groupId>ch.qos.logback</groupId>
+		  <artifactId>logback-classic</artifactId>
+		  <version>1.4.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
